Fix extra padding-bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@
 /* Styles for main elements */
 body {
     padding-top: 50px;
-    padding-bottom: 70px;
 }
 .maint {
     text-align: center;
